--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
 :root {
-    --accent: #ff66bf;
-    --dark: rgba(5, 5, 5, 0.4);
-    --light: #ebf5ee;
-    --border: 5px solid var(--accent);
+    --accent: #66ff73f3;
+    --dark: rgba(3, 3, 3, 0.801);
+    --light: #c5f7c1;
+    --border: 10px solid var(--accent);
 }
 body {
-    font-family: 2rem;
+    font-family: 'Muli', sans-serif;    
     background: var(--dark);
     color: var(--light);
     letter-spacing: 2px;
@@ -21,7 +20,7 @@ p {
     margin: 0;
 }
 div {
-    height: 80vh;
+    height: 60vh;
     margin: 10vh 0;
     border: var(--border);
 }
@@ -30,8 +29,8 @@ div {
     writing-mode: vertical-lr;
     margin: 0.5em 0auto;
     padding-left: 1em;
-    color: var(--accent);
-    opacity: 0.35;
+    color: var(--light);
+    opacity: 0.5;
 
 }
 .table {
